--- a/index.html
+++ b/index.html
@@ -11,9 +11,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <!-- 폰트 cdn : pretendard -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
+    <link rel="stylesheet" href="./css/common.css">
 </head>
-
-
+    <h1 class="page-title">내 안에 숨어있는<br /> 직업캐 찾기!</h1>
+    <h2 class="page-subtitle">
+        김나연
+    </h2>
+    <img src="./images/main_character.png" alt="메인 캐릭터" class="character">
+    <a href="./questions.html" class="btn">
+        본캐 찾으러 Go!
+    </a>
+    <div class="btn">
+        주변에 알리기
+    </div>
 <body>
     
 </body>
