--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         김나연
     </h2>
     <img src="./images/main_character.png" alt="메인 캐릭터" class="character">
-    <a href="./questions.html" class="btn">
+    <a href="./questions.html" class="btn btn-orange">
         본캐 찾으러 Go!
     </a>
-    <div class="btn">
+    <div class="btn btn-green btn-small">
         주변에 알리기
     </div>
 <body>
