--- a/result.html
+++ b/result.html
@@ -12,17 +12,34 @@
     <!-- 폰트 cdn : pretendard -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/home.css">
-
-    <script defer src="./js/share.js"></script>
 
 </head>
 <body>
     <h1 class="page-title">내 안에 숨어있는<br /> 직업캐 찾기!</h1>
     <h2 class="page-subtitle">
-        김나연
+        내 본캐는?
     </h2>
     <img src="./images/main_character.png" alt="메인 캐릭터" class="character">
+    <div class="result">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
+    <div class="result">
+        <h3>이런 내가 직업을 갖는다면?</h3>
+        <div class="jobs">
+            <div class="job"></div>
+            <div class="job"></div>
+        </div>
+    </div>
+    <div class="result">
+        <h3>이런 직업 강의는 어떤가요?</h3>
+        <a href="" target="_blank" class="lecture">
+            <img src="" alt="">
+        </a>
+    </div>
+
     <a href="./questions.html" class="btn btn-orange">
         본캐 찾으러 Go!
     </a>
