--- a/questions.html
+++ b/questions.html
@@ -12,11 +12,10 @@
     <!-- 폰트 cdn : pretendard -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/questions.css">
 
     <script defer src="./js/share.js"></script>
-    <script defer src="./js/questions.js"></script>
+    <script type="module" defer src="./js/questions.js"></script>
 </head>
 
 <body>
