--- a/result.html
+++ b/result.html
@@ -36,7 +36,7 @@
     <div class="result">
         <h3>이런 직업 강의는 어떤가요?</h3>
         <a href="" target="_blank" class="lecture">
-            <img src="" alt="">
+            <img src="" alt="강의">
         </a>
     </div>
 
