--- a/results.html
+++ b/results.html
@@ -12,7 +12,9 @@
     <!-- 폰트 cdn : pretendard -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="./css/common.css">
-
+    <link rel="stylesheet" href="./css/results.css">
+    
+    <script defer src="./js/share.js"></script>
 </head>
 <body>
     <h1 class="page-title">내 안에 숨어있는<br /> 직업캐 찾기!</h1>
@@ -39,7 +41,12 @@
             <img src="" alt="강의">
         </a>
     </div>
-
+    <div class="btn btn-green btn-small share-or-copy">
+        결과 공유하기
+    </div>
+    <a href="/" class="btn btn-gray btn-small">
+        다시 테스트하기
+    </a>
     <a href="./questions.html" class="btn btn-orange">
         본캐 찾으러 Go!
     </a>
