--- a/results.html
+++ b/results.html
@@ -15,13 +15,14 @@
     <link rel="stylesheet" href="./css/results.css">
     
     <script defer src="./js/share.js"></script>
+    <script type="module" defer src="./js/results.js"></script>
 </head>
 <body>
-    <h1 class="page-title">내 안에 숨어있는<br /> 직업캐 찾기!</h1>
+    <h1 class="page-title"></h1>
     <h2 class="page-subtitle">
         내 본캐는?
     </h2>
-    <img src="./images/main_character.png" alt="메인 캐릭터" class="character">
+    <img src="" alt="메인 캐릭터" class="character">
     <div class="result">
         <div class="box"></div>
         <div class="box"></div>
